styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: Calibri, Roboto, Oxygen;
  min-height: 100vh;

  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  /* background: #e6e6e6; */
  overflow-x: hidden;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
  padding: 0;
  max-width: 100vw;
  line-height: 1.4rem;
}

